// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "proto/";

import "google/protobuf/timestamp.proto";
package proto;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}

  // Creates a new project
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {}

  // Gets a project corresponding to a project ID
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {}

  //List Projects for user
  rpc ListProjects(ListProjectRequest) returns (ListProjectResponse) {}

  // Gets Units for a project
  rpc GetUnits(GetUnitsRequest) returns (GetUnitsResponse){}

  // Adds unit to a project
  rpc AddUnit(AddUnitRequest) returns (AddUnitResponse){}
}

message CreateProjectRequest {Project project = 1;}
message CreateProjectResponse {Project project = 1;}

message GetProjectRequest { repeated int64 project_ids= 1; }
message GetProjectResponse { repeated Project project = 1; }

message ListProjectRequest {}
message ListProjectResponse {repeated Project project = 1;}

message GetUnitsRequest {repeated int64 project_ids = 1;}
message GetUnitsResponse {repeated Unit units = 1;}

message AddUnitRequest {Unit unit=1;}
message AddUnitResponse {}

// The request message containing the user's name.
message HelloRequest { string name = 1; }

// The response message containing the greetings
message HelloReply { string message = 1; }

message Metadata {
  google.protobuf.Timestamp created_ts = 1;
  google.protobuf.Timestamp updated_ts = 2;
}

message Unit {
  int64 Id = 1;
  int64 project_id = 3;
  Metadata metadata = 4;
}

message Project {
  int64 Id = 1;
  string Name = 2;
  string Description = 3;
  Metadata metadata = 4;
}
